# gadgetron

./: .gitignore  CMakeLists.txt
gadgets/: CMakeLists.txt
gadgets/custom/: CMakeLists.txt  CustomEPIReconXGadget.cpp  CustomEPIReconXGadget.h  CustomGenericReconCartesianGrappaGadget.cpp  CustomGenericReconCartesianGrappaGadget.h  SMSReconCartesianGrappaGadget.cpp  SMSReconCartesianGrappaGadget.h  gadgetron_custom_export.h
gadgets/epi/: EPICorrGadget.cpp
gadgets/mri_core/: BucketToBufferGadget.cpp  BucketToBufferGadget.h  GenericReconCartesianGrappaGadget.cpp  GenericReconEigenChannelGadget.cpp  GenericReconEigenChannelGadget.h
gadgets/python/: CMakeLists.txt  inter_gadget.py
gadgets/python/legacy/gadgets/: accumulate_and_recon.py
toolboxes/mri/: CMakeLists.txt
toolboxes/mri/custom/: CMakeLists.txt  CustomEPIReconXObjectTrapezoid.h  CustomExport.h
toolboxes/mri_core/: CMakeLists.txt  custom_mri_core_grappa.cpp  custom_mri_core_grappa.h  mri_core_acquisition_bucket.h  mri_core_data.h  mri_core_utility.cpp
